[gd_scene load_steps=15 format=3 uid="uid://dwwwnrtokmwfb"]

[ext_resource type="PackedScene" uid="uid://dqvmyatymqdtd" path="res://src/game_world/objects/game_object.tscn" id="1_v17ab"]
[ext_resource type="Script" path="res://src/game_world/objects/front_door/front_door.gd" id="2_iv7au"]
[ext_resource type="Texture2D" uid="uid://edj00d85va37" path="res://assets/sprites/tiles/door front.png" id="2_vnqjp"]
[ext_resource type="AudioStream" uid="uid://c3oo7qokoxs0y" path="res://assets/sounds/open.ogg" id="3_dlsoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67l5a"]
resource_local_to_scene = true
size = Vector2(256, 472)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdpli"]
atlas = ExtResource("2_vnqjp")
region = Rect2(0, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xobo7"]
atlas = ExtResource("2_vnqjp")
region = Rect2(256, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn2t5"]
atlas = ExtResource("2_vnqjp")
region = Rect2(512, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wue2o"]
atlas = ExtResource("2_vnqjp")
region = Rect2(768, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckftd"]
atlas = ExtResource("2_vnqjp")
region = Rect2(1024, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yef4y"]
atlas = ExtResource("2_vnqjp")
region = Rect2(1280, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg0cn"]
atlas = ExtResource("2_vnqjp")
region = Rect2(1536, 0, 256, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugaet"]
atlas = ExtResource("2_vnqjp")
region = Rect2(1792, 0, 256, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_37um7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdpli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xobo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn2t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wue2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckftd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yef4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg0cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugaet")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[node name="FrontDoor" instance=ExtResource("1_v17ab")]
script = ExtResource("2_iv7au")

[node name="StaticBody2D" parent="." index="0"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2(0, 19.5)
shape = SubResource("RectangleShape2D_67l5a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_37um7")
animation = &"open"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="2"]
stream = ExtResource("3_dlsoa")

[node name="Area2D" type="Area2D" parent="." index="3"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(0, 19.5)
shape = SubResource("RectangleShape2D_67l5a")
disabled = true

[node name="Label" type="Label" parent="." index="4"]
visible = false
offset_left = -225.0
offset_top = -194.0
offset_right = 231.0
offset_bottom = -108.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Press E to enter"
horizontal_alignment = 1

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
